sidebar for main

--- a/src/main/resources/static/Admin/sidebar.css
+++ b/src/main/resources/static/Admin/sidebar.css
@@ -142,3 +142,10 @@ body {
     margin-top: auto;
     width: 100%;
 }
+
+/*ส่วนของ main สำหรับทำงานคู่กับ sidebar*/
+main {
+    width:100%;
+    padding: 10%;
+    margin-left: var(--sidebar-width);
+}
