--- a/src/main/resources/static/Admin/sidebar.css
+++ b/src/main/resources/static/Admin/sidebar.css
@@ -36,16 +36,27 @@ body {
     width: 100%;
 }
 
+.layout {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
 /*--- Sidebar --- */
 .sidebar {
+    position: fixed;   /* ตรึงกับ viewport */
+    top: 0;
+    left: 0;
     width: var(--sidebar-width);
-    background: var(--bg-light);
-    padding: 30px 0;
+    height: 100vh;
+    padding: 50px 0;
+    white-space: nowrap;  /* hug content */
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    height: 100vh;
-    position: fixed;
+    background: var(--bg-light);
+    z-index: 1000;  /* อยู่เหนือ main */
 }
 
 /* logo */
@@ -53,7 +64,6 @@ body {
     display: flex;
     align-items: center;
     gap: 12px;
-    margin-bottom: 40px;
     width: max-content;
 }
 
@@ -74,8 +84,9 @@ body {
 
 /* menu */
 .nav-menu {
-    flex: 1;
     width: 100%;
+    height: 700px;
+    padding: 50px 0;
 }
 
 .nav-item {
@@ -153,35 +164,38 @@ body {
 }
 
 /*ส่วนของ main สำหรับทำงานคู่กับ sidebar*/
+/* Main จะถูกดันไปทางขวาโดยอัตโนมัติ */
+/* main ดันขวาให้เหลือพื้นที่ sidebar */
 main {
-    width:100%;
-    padding: 1%;
     margin-left: var(--sidebar-width);
+    flex: 1;
+    padding: 2%;
 }
 
 @media (max-width: 1024px) {
-  :root {
-    --sidebar-width: fit-content; /* หรือ max-content */
-  }
+    :root {
+        --sidebar-width: 240px; /* hug content */
+    }
 
-  .sidebar {
-    width: var(--sidebar-width);
-    /* เพื่อให้ความกว้าง hug content */
-    white-space: nowrap; 
-  }
+    .sidebar {
+        width: var(--sidebar-width);
+    }
 
-  main {
-    margin-left: var(--sidebar-width);
-  }
+    main {
+        margin-left: var(--sidebar-width);
+    }
 }
+
 @media (max-width: 768px) {
+    :root {
+        --sidebar-width: 64px; /* hug content */
+    }
+    .nav-item span,
+    .logo-text {
+        display: none;
+    }
+
     .nav-item {
-            padding: 15px;
-    }
-    .nav-item span{
-        display: none;
-    }
-    .logo-text h2 {
-        display: none;
+        padding: 15px 20px;
     }
 }
