--- a/src/main/resources/static/Admin/petdetail.css
+++ b/src/main/resources/static/Admin/petdetail.css
@@ -116,7 +116,7 @@
     background: white;
     border-radius: 20px;
     padding: 25px 30px;
-    display: flex;
+    display: table-column;
     justify-content: space-between;
     align-items: center;
     box-shadow: var(--box-shadow);
@@ -128,6 +128,13 @@
     gap: 10px;
     font-size: 16px;
     font-weight: 600;
+    align-self: start;
+}
+
+.status-kub{
+    display: flex;
+    align-self: auto;
+    justify-content: space-between;
 }
 
 .status-label {
@@ -145,6 +152,7 @@
 .action-btns {
     display: flex;
     gap: 15px;
+    align-items: end;
 }
 
 .btn-icon {
