--- a/src/main/resources/static/Admin/sidebar.css
+++ b/src/main/resources/static/Admin/sidebar.css
@@ -169,7 +169,8 @@ body {
 main {
     margin-left: var(--sidebar-width);
     flex: 1;
-    padding: 2%;
+    padding: 50px 2%;
+    height: fit-content;
 }
 
 @media (max-width: 1024px) {
