--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -161,6 +161,7 @@ header {
     top: 85px;
     right: 80px;
     background-color: #FFFFFF;
+    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.25);
 }
 
 .profile-content {
