--- a/src/main/resources/static/Admin/sidebar.css
+++ b/src/main/resources/static/Admin/sidebar.css
@@ -28,6 +28,7 @@
 body {
     font-family: 'Manrope', 'Mali', 'Itim', sans-serif;
     color: #333;
+    background-color: var(--bg-main);
 }
 
 .container {
